hphp/test/slow/ext_functioncredential/class_constant_error.php.expectf
Fatal error: Expected constant expression for initializer in %s/test/slow/ext_functioncredential/class_constant_error.php on line 4
